--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "angular": "^1.6.6",
     "angular-resource": "^1.6.6",
     "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
     "express": "^4.15.4",
     "express-load": "^1.1.16",
     "http": "0.0.0",
-    "mongoose": "^4.11.12",
-    "swig": "^1.4.2"
+    "mongoose": "^4.11.12"
   },
   "devDependencies": {
     "chai": "^4.1.2",
