[RELEASE] add files for heroku

--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-  "name": "rout-easy",
-  "version": "1.0.0",
-  "description": "Challenge for development ",
-  "main": "app.js",
-  "scripts": {
-    "start": "./node_modules/mocha/bin/mocha --reporter spec --timeout 7000 NODE_ENV=production nodemon app.js",
-    "dev": "NODE_ENV=development nodemon app.js",
-    "test": "./node_modules/mocha/bin/mocha --reporter spec --timeout 7000"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/renanbym/rout-easy.git"
-  },
-  "engines": {
-    "node": "6.10.2"
-  },
-  "author": "Renan Mariano <renanbym@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/renanbym/rout-easy/issues"
-  },
-  "homepage": "https://github.com/renanbym/rout-easy#readme",
-  "dependencies": {
-    "angular": "^1.6.6",
-    "angular-dynamic-number": "^2.5.1",
-    "angular-resource": "^1.6.6",
-    "body-parser": "^1.18.2",
-    "ejs": "^2.5.7",
-    "express": "^4.15.4",
-    "express-load": "^1.1.16",
-    "http": "0.0.0",
-    "mongoose": "^4.11.12",
-    "mongoose-double": "0.0.1"
-  },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^3.0.0",
-    "mocha": "^3.5.3",
-    "nodemon": "^1.12.1"
-  }
+    "name": "rout-easy",
+    "version": "1.0.0",
+    "description": "Challenge for development ",
+    "main": "app.js",
+    "scripts": {
+        "start": "./node_modules/mocha/bin/mocha --reporter spec --timeout 7000 NODE_ENV=production nodemon app.js",
+        "dev": "NODE_ENV=development nodemon app.js",
+        "build": "npm install",
+        "test": "./node_modules/mocha/bin/mocha --reporter spec --timeout 7000"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/renanbym/rout-easy.git"
+    },
+    "engines": {
+        "node": "6.10.2"
+    },
+    "author": "Renan Mariano <renanbym@gmail.com>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/renanbym/rout-easy/issues"
+    },
+    "homepage": "https://github.com/renanbym/rout-easy#readme",
+    "dependencies": {
+        "angular": "^1.6.6",
+        "angular-dynamic-number": "^2.5.1",
+        "angular-resource": "^1.6.6",
+        "body-parser": "^1.18.2",
+        "ejs": "^2.5.7",
+        "express": "^4.15.4",
+        "express-load": "^1.1.16",
+        "http": "0.0.0",
+        "mongoose": "^4.11.12",
+        "mongoose-double": "0.0.1"
+    },
+    "devDependencies": {
+        "chai": "^4.1.2",
+        "chai-http": "^3.0.0",
+        "mocha": "^3.5.3",
+        "nodemon": "^1.12.1"
+    }
 }
