concat script run production

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Challenge for development ",
     "main": "app.js",
     "scripts": {
-        "start": "./node_modules/mocha/bin/mocha --reporter spec --timeout 7000 NODE_ENV=production nodemon app.js",
+        "start": "./node_modules/mocha/bin/mocha --reporter spec --timeout 7000 && NODE_ENV=production nodemon app.js",
         "dev": "NODE_ENV=development nodemon app.js",
         "build": "npm install",
         "test": "./node_modules/mocha/bin/mocha --reporter spec --timeout 7000"
